# financia

./: Dockerfile  README.md  docker-compose.yml  drizzle.config.ts  flake.nix  manage.py  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  schema.sql
financia/: asgi.py  settings.py  urls.py  wsgi.py
src/app/: actions.ts  add-new-transaction.tsx  expenses.tsx  finance-tracker.tsx  globals.css  layout.tsx  page.tsx  submit-button.tsx  transactions.tsx
src/components/ui/: input.tsx
src/lib/db/: schema.ts
templates/registration/: login.html
templates/transactions/: base.html  budget_list.html  dashboard.html  transaction_form.html  transaction_list.html
transactions/: admin.py  forms.py  models.py  urls.py  views.py
transactions/migrations/: 0001_initial.py  0002_alter_transaction_category_and_more.py  0003_add_trigger_and_procedure.py
