[tool.poetry]
name = "financia"
version = "0.1.0"
description = ""
authors = ["Sujay R <68642484+sujay1844@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django-crispy-forms = "^2.3"
django = "^5.1.3"
crispy-bootstrap4 = "^2024.10"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
